# TriGLU

./: .gitignore  CITATION.cff  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
LICENSES/: README.md
configs/: smoke.yaml  smoke_ablations.yaml  smoke_residual_controls.yaml
configs/12l_1k_100m/: 12a0t.yaml  3a9t.yaml  6a6t.yaml  9a3t.yaml
configs/20l_4k_1b/: 10a10t.yaml  15a5t.yaml  15a5t_final_attention.yaml  15a5t_front_blend.yaml  15a5t_late_alternating.yaml  15a5t_tail_block.yaml  20a0t.yaml  5a15t.yaml  9a11t_front_blend.yaml
configs/20l_4k_1b/ablations/: 15a5_mb_mlp_front_blend.yaml  15a5_swiglu_front_blend.yaml  15a5_triglu_no_rope_front_blend.yaml  20a0t_parallel_block.yaml  (+7 more)
docs/: design.md  related-work.md  results-schema.md  results.md  screening-results.md
pseudocode/: triglu_layer.pseudo
results/: README.md
scripts/: run_collapse_control_seeds.sh  run_combination_and_parallel_controls.sh  run_context_benchmarks.sh  run_final_replications_and_benchmarks.sh  run_nine_layer_ffn_controls.sh  run_no_rope_placement_sweep.sh  run_prior_art_ablations.sh  run_replication_seeds.sh  run_residual_topology_controls.sh  run_short_context_validation.sh  run_v020_overnight.sh  run_v020_post_queue_ablation.sh
src/triglu/: __init__.py  analyze_rank.py  benchmark.py  config.py  data.py  evaluate.py  layers.py  model.py  prepare_data.py  report.py  rope.py  runtime.py  train.py
tests/: conftest.py  test_ablation_mixers.py  test_configs.py  test_data.py  test_model.py  test_rank_analysis.py  test_report.py  test_training.py  test_triglu.py
(+10 files in other folders)
